fixed navbar buttons unwanted scaling on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,17 +5,17 @@ html * {
 body {
     padding-top: 4.5rem;
     padding-bottom: 120px;
-/*    background: rgb(57, 57, 167);
-    background: radial-gradient(circle, rgba(57, 57, 167, 1) 9%, rgba(62, 126, 236, 1) 89%);*/
+    /*    background: rgb(57, 57, 167);
+        background: radial-gradient(circle, rgba(57, 57, 167, 1) 9%, rgba(62, 126, 236, 1) 89%);*/
 }
 
 canvas {
-    position:fixed;
-    padding:0;
-    margin:0;
+    position: fixed;
+    padding: 0;
+    margin: 0;
 
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
 
     width: 100%;
     height: 100%;
@@ -122,9 +122,12 @@ hr {
     transition: transform .2s;
 }
 
-.nav-button:hover {
-    transform: scale(1.1);
+@media (min-width: 768px) {
+    .nav-button:hover {
+        transform: scale(1.1);
+    }
 }
+
 
 .animateOnLoad {
     animation: fadeIn 1s;
